--- a/src/assets/css/modal_area.css
+++ b/src/assets/css/modal_area.css
@@ -453,8 +453,10 @@
             padding-bottom: 16px;
 
             .card-image {
-                width: 400px;
-                height: 225px;
+                width: 295px;
+                height: 166px;
+                min-width: 295px;
+                min-height: 166px;
             }
 
             .card-select-button {
@@ -475,7 +477,8 @@
             }
 
             .card-info {
-                height: 225px;
+                height: 166px;
+                min-height: 166px;
                 display: flex;
                 flex-direction: column;
                 padding-left: 16px;
@@ -621,8 +624,10 @@
         }
 
         .card-image-area {
-            width: 310px;
-            height: 174px;
+            width: 295px;
+            height: 166px;
+            min-width: 295px;
+            min-height: 166px;
             background-size: cover;
             background-repeat: no-repeat;
             display: flex;
