--- a/src/assets/css/modal_area.css
+++ b/src/assets/css/modal_area.css
@@ -423,12 +423,28 @@
     }
 
     .headline-area {
+        display: flex;
         padding-bottom: 8px;
+        flex-direction: row;
+        justify-content: space-between;
 
         .headline-text {
             font-size: 20px;
             padding-left: 4px;
             vertical-align: super;
+        }
+
+        .headline-close-button {
+            background: none;
+            border: none;
+            cursor: pointer;
+            outline: none;
+            appearance: none;
+            border-radius: 8px;
+        }
+
+        .headline-close-button:hover {
+            background: #efefef;
         }
     }
 
@@ -441,15 +457,25 @@
         flex-direction: column;
         background: #ffffff;
         width: 50%;
-        max-height: 80%;
+        max-height: 70%;
         margin: 10% auto;
         padding: 16px;
         border-radius: 8px;
 
+        @media (max-width: 1000px) {
+            width: 90%;
+            max-height: 90%;
+        }
+
+        @media (max-width: 600px) {
+            margin: 5% auto;
+        }
+
         .card-info-area {
             display: flex;
             flex-direction: row;
-            align-items: center;
+            flex-wrap: wrap;
+            align-items: flex-start;
             padding-bottom: 16px;
 
             .card-image {
@@ -457,6 +483,8 @@
                 height: 166px;
                 min-width: 295px;
                 min-height: 166px;
+                padding-right: 8px;
+                padding-bottom: 8px;
             }
 
             .card-select-button {
@@ -472,16 +500,18 @@
                 appearance: none;
             }
 
+            .card-select-button:hover {
+                opacity: 0.7;
+                transition: 0.3s;
+            }
+
             .card-select-text {
                 font-size: 20px;
             }
 
             .card-info {
-                height: 166px;
-                min-height: 166px;
                 display: flex;
                 flex-direction: column;
-                padding-left: 16px;
             }
 
             .card-info-text {
@@ -551,6 +581,12 @@
         padding: 16px;
         border-radius: 8px;
 
+        @media (max-width: 1000px) {
+            margin: 5% auto;
+            width: 90%;
+            height: 90%;
+        }
+
         .card-filter-area {
             padding: 8px 0;
         }
@@ -572,7 +608,14 @@
         .card-filter-checkbox-area {
             display: flex;
             flex-direction: row;
+            flex-wrap: wrap;
             padding-top: 8px;
+
+            @media (max-width: 600px) {
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+            }
         }
 
         .card-filter-checkbox {
@@ -635,6 +678,11 @@
             justify-content: space-between;
             cursor: pointer;
             border: 2px solid #333333;
+        }
+
+        .card-image-area:hover {
+            opacity: 0.7;
+            transition: 0.3s;
         }
 
         .card-name {
