--- a/src/assets/css/modal_area.css
+++ b/src/assets/css/modal_area.css
@@ -1,417 +1,4 @@
-.modal-area.color-saki {
-    .common-button {
-        background: linear-gradient(to right, #fb4f60, #fbb7a1);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #fb4f60, #ffffff 30%),
-                color-mix(in srgb, #fbb7a1, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #ffffff;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #fb4f60, #fbb7a1) 1;
-    }
-}
-
-.modal-area.color-temari {
-    .common-button {
-        background: linear-gradient(to right, #23b3e6, #81e5de);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #23b3e6, #ffffff 30%),
-                color-mix(in srgb, #81e5de, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #ffffff;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #23b3e6, #81e5de) 1;
-    }
-}
-
-.modal-area.color-kotone {
-    .common-button {
-        background: linear-gradient(to right, #f3d51d, #fbb5d1);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #f3d51d, #ffffff 30%),
-                color-mix(in srgb, #fbb5d1, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #333333;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #f3d51d, #fbb5d1) 1;
-    }
-}
-
-.modal-area.color-mao {
-    .common-button {
-        background: linear-gradient(to right, #bf5cc4, #f6aba4);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #bf5cc4, #ffffff 30%),
-                color-mix(in srgb, #f6aba4, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #ffffff;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #bf5cc4, #f6aba4) 1;
-    }
-}
-
-.modal-area.color-lilja {
-    .common-button {
-        background: linear-gradient(to right, #cee0e0, #92cad4);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #cee0e0, #ffffff 30%),
-                color-mix(in srgb, #92cad4, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #333333;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #cee0e0, #92cad4) 1;
-    }
-}
-
-.modal-area.color-china {
-    .common-button {
-        background: linear-gradient(to right, #fa891e, #fb5e52);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #fa891e, #ffffff 30%),
-                color-mix(in srgb, #fb5e52, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #ffffff;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #fa891e, #fb5e52) 1;
-    }
-}
-
-.modal-area.color-sumika {
-    .common-button {
-        background: linear-gradient(to right, #8fdc57, #c8e01b);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #8fdc57, #ffffff 30%),
-                color-mix(in srgb, #c8e01b, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #333333;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #8fdc57, #c8e01b) 1;
-    }
-}
-
-.modal-area.color-hiro {
-    .common-button {
-        background: linear-gradient(to right, #00bcd3, #507ff9);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #00bcd3, #ffffff 30%),
-                color-mix(in srgb, #507ff9, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #ffffff;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #00bcd3, #507ff9) 1;
-    }
-}
-
-.modal-area.color-sena {
-    .common-button {
-        background: linear-gradient(to right, #fbac26, #f1e769);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #fbac26, #ffffff 30%),
-                color-mix(in srgb, #f1e769, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #333333;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #fbac26, #f1e769) 1;
-    }
-}
-
-.modal-area.color-misuzu {
-    .common-button {
-        background: linear-gradient(to right, #6ba2f7, #cdadfa);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #6ba2f7, #ffffff 30%),
-                color-mix(in srgb, #cdadfa, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #ffffff;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #6ba2f7, #cdadfa) 1;
-    }
-}
-
-.modal-area.color-ume {
-    .common-button {
-        background: linear-gradient(to right, #f34a29, #ecc64b);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #f34a29, #ffffff 30%),
-                color-mix(in srgb, #ecc64b, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #ffffff;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #f34a29, #ecc64b) 1;
-    }
-}
-
-.modal-area.color-rinami {
-    .common-button {
-        background: linear-gradient(to right, #f97dbd, #f0b7f9);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: linear-gradient(
-                to right,
-                color-mix(in srgb, #f97dbd, #ffffff 30%),
-                color-mix(in srgb, #f0b7f9, #ffffff 30%)
-        );
-    }
-
-    .common-button-name {
-        color: #ffffff;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #f97dbd, #f0b7f9) 1;
-    }
-}
-
-.modal-area.color-default {
-    .common-button {
-        background: #958b7f;
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        padding: 8px;
-        appearance: none;
-    }
-
-    .common-button:hover {
-        background: color-mix(in srgb, #958b7f, #ffffff 30%);
-    }
-
-    .common-button-name {
-        color: #ffffff;
-        font-weight: bold;
-        font-size: 16px;
-    }
-
-    .card-event-headline, .card-ability-headline, .card-filter-list-header {
-        border-image: linear-gradient(to right, #958b7f, #958b7f) 1;
-    }
-}
-
 .modal-area {
-    .basic-button {
-        background: #ffffff;
-        border: 2px solid #333333;
-        border-radius: 16px;
-        cursor: pointer;
-        outline: none;
-        padding: 4px 8px;
-        appearance: none;
-    }
-
-    .basic-button:hover {
-        background: #efefef;
-    }
-
-    .basic-button:disabled {
-        cursor: not-allowed;
-    }
-
-    .basic-button-name {
-        color: #333333;
-        font-size: 16px;
-    }
-
-    .common-button:disabled {
-        cursor: not-allowed;
-    }
-
     .modal-window-area {
         position: fixed;
         top: 0;
@@ -450,6 +37,15 @@
 
     .content-area {
         overflow-y: scroll;
+    }
+
+    .edit-button-area {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .edit-button {
+        padding-right: 8px;
     }
 
     .card-edit-modal {
@@ -531,10 +127,6 @@
             }
         }
 
-        .card-event-headline {
-            border-bottom: 2px solid;
-        }
-
         .card-event-area {
             display: flex;
             flex-direction: column;
@@ -546,10 +138,6 @@
             }
         }
 
-        .card-ability-headline {
-            border-bottom: 2px solid;
-        }
-
         .card-ability-area {
             display: flex;
             flex-direction: column;
@@ -559,15 +147,6 @@
             .card-ability {
                 padding-bottom: 16px;
             }
-        }
-
-        .edit-button-area {
-            display: flex;
-            flex-direction: row;
-        }
-
-        .edit-button {
-            padding-right: 8px;
         }
     }
 
@@ -601,7 +180,6 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            border-bottom: 2px solid;
             padding-top: 16px;
         }
 
@@ -724,17 +302,13 @@
         background: #ffffff;
         width: 50%;
         max-height: 70%;
-        margin: 10% auto;
+        margin: 25% auto;
         padding: 16px;
         border-radius: 8px;
 
-        @media (max-width: 1000px) {
+        @media (max-width: 600px) {
             width: 90%;
             max-height: 90%;
-        }
-
-        @media (max-width: 600px) {
-            margin: 5% auto;
         }
 
         .produce-idol-info-area {
@@ -864,14 +438,36 @@
         .table-data.visual {
             background: rgba(250, 169, 0, 0.1);
         }
+    }
 
-        .edit-button-area {
-            display: flex;
-            flex-direction: row;
+    .setting-modal {
+        display: flex;
+        flex-direction: column;
+        background: #ffffff;
+        width: 50%;
+        max-height: 70%;
+        margin: 25% auto;
+        padding: 16px;
+        border-radius: 8px;
+
+        @media (max-width: 600px) {
+            width: 90%;
+            max-height: 90%;
         }
 
-        .edit-button {
-            padding-right: 8px;
+        .setting-color-area {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            padding: 8px 0;
+        }
+
+        .setting-color-button {
+            padding: 8px;
+        }
+
+        .color-button {
+            width: 80px;
         }
     }
 }
