--- a/src/assets/css/header_area.css
+++ b/src/assets/css/header_area.css
@@ -182,22 +182,49 @@
 
     .schedule-tab-area {
         display: flex;
+        flex-direction: row;
         flex-wrap: nowrap;
+        justify-content: flex-start;
+        width: 100%;
+        height: 48px;
+        overflow-x: auto;
+        scrollbar-gutter: stable;
 
         .schedule-tab {
+            width: 20%;
+            min-width: 15%;
+            max-width: 30%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
             background: #efefef;
             border-top: 2px solid #666666;
             border-right: 2px solid #666666;
             border-left: none;
             border-bottom: none;
             cursor: default;
+
+            @media (max-width: 600px) {
+                width: 50%;
+                min-width: 40%;
+                max-width: 50%;
+            }
         }
 
         .schedule-tab.active {
             background: #ffffff;
         }
 
+        .schedule-tab-name-area {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+
         .schedule-tab-name {
+            width: 100%;
             color: #333333;
             font-size: 12px;
             white-space: nowrap;
@@ -207,12 +234,18 @@
         }
 
         .schedule-tab-close-button {
+            min-width: 10%;
             background: none;
             border: none;
             cursor: pointer;
             outline: none;
             padding: 0;
             appearance: none;
+            border-radius: 4px;
+        }
+
+        .schedule-tab-close-button:hover {
+            background: #dfdfdf;
         }
     }
 }
