--- a/src/assets/css/header_area.css
+++ b/src/assets/css/header_area.css
@@ -221,8 +221,8 @@
 
             .schedule-tab-card {
                 width: 20%;
-                min-width: 20%;
-                max-width: 30%;
+                min-width: 10%;
+                max-width: 40%;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
@@ -235,9 +235,9 @@
                 cursor: default;
 
                 @media (max-width: 600px) {
-                    width: 50%;
+                    width: 60%;
                     min-width: 50%;
-                    max-width: 60%;
+                    max-width: 80%;
                 }
             }
 
@@ -246,7 +246,7 @@
             }
 
             .schedule-tab-card-name-area {
-                width: 100%;
+                width: 80%;
                 height: 100%;
                 display: flex;
                 align-items: center;
@@ -263,7 +263,7 @@
             }
 
             .schedule-tab-card-close-button {
-                min-width: 10%;
+                width: auto;
                 background: none;
                 border: none;
                 cursor: pointer;
