--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -483,69 +483,257 @@
             justify-content: flex-start;
         }
 
-        .table-header {
-            text-align: start;
-        }
-
-        .table-header-type {
-            text-align: start;
-            width: 80px;
-
-            @media (max-width: 500px) {
-                width: 60px;
+        .produce-idol-parameter-table {
+            .table-header {
+                text-align: start;
             }
-        }
 
-        .table-header-type.vocal {
-            border-bottom: 2px solid #FB0082;
-        }
+            .table-header-type {
+                text-align: start;
+                width: 80px;
 
-        .table-header-type.dance {
-            border-bottom: 2px solid #0086F0;
-        }
-
-        .table-header-type.visual {
-            border-bottom: 2px solid #FAA900;
-        }
-
-        .table-header-type.hp {
-            border-bottom: 2px solid #3CC743;
-        }
-
-        .table-header-text {
-            @media (max-width: 500px) {
-                display: none;
+                @media (max-width: 500px) {
+                    width: 60px;
+                }
             }
-        }
 
-        .table-header-text-abbr {
-            @media (min-width: 501px) {
-                display: none;
+            .table-header-type.vocal {
+                border-bottom: 2px solid #FB0082;
             }
-        }
 
-        .table-data {
-            text-align: end;
-        }
+            .table-header-type.dance {
+                border-bottom: 2px solid #0086F0;
+            }
 
-        .table-data.vocal {
-            background: rgba(251, 0, 130, 0.1);
-        }
+            .table-header-type.visual {
+                border-bottom: 2px solid #FAA900;
+            }
 
-        .table-data.dance {
-            background: rgba(0, 134, 240, 0.1);
-        }
+            .table-header-type.hp {
+                border-bottom: 2px solid #3CC743;
+            }
 
-        .table-data.visual {
-            background: rgba(250, 169, 0, 0.1);
-        }
+            .table-header-text {
+                @media (max-width: 500px) {
+                    display: none;
+                }
+            }
 
-        .table-data.hp {
-            background: rgba(60, 199, 67, 0.1);
+            .table-header-text-abbr {
+                @media (min-width: 501px) {
+                    display: none;
+                }
+            }
+
+            .table-data {
+                text-align: end;
+            }
+
+            .table-data.vocal {
+                background: rgba(251, 0, 130, 0.1);
+            }
+
+            .table-data.dance {
+                background: rgba(0, 134, 240, 0.1);
+            }
+
+            .table-data.visual {
+                background: rgba(250, 169, 0, 0.1);
+            }
+
+            .table-data.hp {
+                background: rgba(60, 199, 67, 0.1);
+            }
         }
     }
 
     .schedule-view-area {
         padding: 16px 16px;
+
+        .organization-area {
+            .content-area {
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                padding: 8px;
+            }
+
+            .produce-idol-area {
+                width: 100%;
+                padding-bottom: 16px;
+            }
+
+            .produce-idol {
+                display: grid;
+                align-items: center;
+                grid-template-rows: 60px 1fr;
+                grid-template-columns: 165px 1fr;
+
+                @media (max-width: 500px) {
+                    display: grid;
+                    align-items: center;
+                    grid-template-rows: 150px 1fr;
+                    grid-template-columns: 115px 1fr;
+                }
+            }
+
+            .produce-idol-image {
+                width: 154px;
+                height: 205px;
+                min-width: 154px;
+                min-height: 205px;
+                grid-row: 1 / 3;
+                grid-column: 1 / 2;
+
+                @media (max-width: 500px) {
+                    width: 102px;
+                    height: 136px;
+                    min-width: 102px;
+                    min-height: 136px;
+                    grid-row: 1 / 2;
+                    grid-column: 1 / 2;
+                }
+            }
+
+            .produce-idol-select-button {
+                width: 100%;
+                height: 100%;
+                background: #efefef;
+                background-size: cover;
+                background-repeat: no-repeat;
+                border: 2px solid #333333;
+                cursor: pointer;
+                outline: none;
+                padding: 0;
+                appearance: none;
+            }
+
+            .produce-idol-level-area {
+                grid-row: 1 / 2;
+                grid-column: 2 / 3;
+                display: flex;
+                flex-direction: row;
+
+                @media (max-width: 500px) {
+                    grid-row: 1 / 2;
+                    grid-column: 2 / 3;
+                    display: flex;
+                    flex-direction: column;
+                }
+            }
+
+            .produce-idol-level {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding-right: 32px;
+
+                @media (max-width: 500px) {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    padding-right: 0;
+                    padding-bottom: 8px;
+                }
+            }
+
+            .produce-idol-info-text {
+                padding-right: 8px;
+            }
+
+            .produce-idol-parameter-area {
+                grid-row: 2 / 3;
+                grid-column: 2 / 3;
+
+                @media (max-width: 500px) {
+                    grid-row: 2 / 3;
+                    grid-column: 1 / 3;
+                }
+            }
+
+            .produce-idol-parameter-table {
+                .table-header {
+                    text-align: start;
+                }
+
+                .table-header-type {
+                    text-align: start;
+                    width: 80px;
+
+                    @media (max-width: 500px) {
+                        width: 60px;
+                    }
+                }
+
+                .table-header-type.vocal {
+                    border-bottom: 2px solid #FB0082;
+                }
+
+                .table-header-type.dance {
+                    border-bottom: 2px solid #0086F0;
+                }
+
+                .table-header-type.visual {
+                    border-bottom: 2px solid #FAA900;
+                }
+
+                .table-header-type.hp {
+                    border-bottom: 2px solid #3CC743;
+                }
+
+                .table-header-type.point {
+                    border-bottom: 2px solid #958b7f;
+                }
+
+                .table-header-text {
+                    @media (max-width: 500px) {
+                        display: none;
+                    }
+                }
+
+                .table-header-text-abbr {
+                    @media (min-width: 501px) {
+                        display: none;
+                    }
+                }
+
+                .table-data {
+                    text-align: end;
+                }
+
+                .table-data.vocal {
+                    background: rgba(251, 0, 130, 0.1);
+                }
+
+                .table-data.dance {
+                    background: rgba(0, 134, 240, 0.1);
+                }
+
+                .table-data.visual {
+                    background: rgba(250, 169, 0, 0.1);
+                }
+
+                .table-data.hp {
+                    background: rgba(60, 199, 67, 0.1);
+                }
+
+                .table-data.point {
+                    background: rgba(149, 139, 127, 0.1);
+                }
+            }
+
+            .challenge-item-area {
+                padding-bottom: 16px;
+            }
+
+            .support-card-area {
+                padding-bottom: 16px;
+            }
+
+            .produce-memory-area {
+                padding-bottom: 16px;
+            }
+        }
     }
 }
